# image-reorder

./: .coveragerc  .mypy.ini  .pylintrc  .tabignore  Changelog  DEVELOPER.md  NOTICE  PyPI.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test-suite.yml
.run/tasks/: suite.sh
docs/: conf.py  index.rst
src/reorder/: cli.py  image.py  interface.py
src/tests/reorder/: test_cli.py  test_image.py  testutils.py
tests/: test_cli.py  test_image.py  test_util.py
